--- a/src/main/resources/assets/betternether/blockstates/black_apple.json
+++ b/src/main/resources/assets/betternether/blockstates/black_apple.json
@@ -1,11 +1,24 @@
 {
     "variants":
 	{
-        "": [
-			{ "model": "betternether:block/black_apple" },
-			{ "model": "betternether:block/black_apple", "y": 90 },
-			{ "model": "betternether:block/black_apple", "y": 180 },
-			{ "model": "betternether:block/black_apple", "y": 270 }
+        "age=0": { "model": "betternether:block/black_apple_seed" },
+		"age=1": [
+			{ "model": "betternether:block/black_apple_1" },
+			{ "model": "betternether:block/black_apple_1", "y": 90 },
+			{ "model": "betternether:block/black_apple_1", "y": 180 },
+			{ "model": "betternether:block/black_apple_1", "y": 270 }
+		],
+		"age=2": [
+			{ "model": "betternether:block/black_apple_2" },
+			{ "model": "betternether:block/black_apple_2", "y": 90 },
+			{ "model": "betternether:block/black_apple_2", "y": 180 },
+			{ "model": "betternether:block/black_apple_2", "y": 270 }
+		],
+		"age=3": [
+			{ "model": "betternether:block/black_apple_3" },
+			{ "model": "betternether:block/black_apple_3", "y": 90 },
+			{ "model": "betternether:block/black_apple_3", "y": 180 },
+			{ "model": "betternether:block/black_apple_3", "y": 270 }
 		]
     }
 }
