--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=20w20b
-	yarn_mappings=20w20b+build.7
-	loader_version=0.8.3+build.196
+	minecraft_version=1.16-pre2
+	yarn_mappings=1.16-pre2+build.2
+	loader_version=0.8.7+build.201
 
 # Mod Properties
 	mod_version = 2.7.6
@@ -14,4 +14,4 @@ org.gradle.jvmargs=-Xmx1G
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.10.9+build.346-1.16
+	fabric_version=0.11.7+build.356-1.16
