--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16-pre8
-	yarn_mappings=1.16-pre8+build.1
-	loader_version=0.8.7+build.201
+	minecraft_version=1.16-rc1
+	yarn_mappings=1.16-rc1+build.4
+	loader_version=0.8.8+build.202
 
 # Mod Properties
 	mod_version = 2.8.4
