--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,15 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16-rc1
-	yarn_mappings=1.16-rc1+build.8
+	minecraft_version=1.16
+	yarn_mappings=1.16+build.1
 	loader_version=0.8.8+build.202
 
 # Mod Properties
-	mod_version = 2.9.4
+	mod_version = 3.0.0
 	maven_group = paulevs.betternether
 	archives_base_name = better-nether
 
 # Dependencies
 	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.13.0+build.369-1.16
+	fabric_version=0.13.1+build.370-1.16
