--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.9.3+build.207
 
 # Mod Properties
-	mod_version = 4.0.0
+	mod_version = 4.0.0-alpha
 	maven_group = paulevs.betternether
 	archives_base_name = better-nether
 
