--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.4
-	yarn_mappings=1.16.4+build.1
-	loader_version=0.10.6+build.214
+# check these on https://fabricmc.net/use
+minecraft_version=1.16.5
+yarn_mappings=1.16.5+build.1
+loader_version=0.11.1
 
 # Mod Properties
-	mod_version = 5.0.4
-	maven_group = paulevs.betternether
-	archives_base_name = better-nether
+mod_version = 5.0.5
+maven_group = paulevs.betternether
+archives_base_name = better-nether
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.25.1+build.416-1.16
-	modmenu_version = 1.14.6+build.31
+# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+fabric_version=0.29.3+1.16
+modmenu_version = 1.14.13+build.19
