--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,14 @@ version = project.mod_version
 group = project.maven_group
 
 minecraft {
+    accessWidener = file("src/main/resources/betternether.accesswidener")
 }
 
 dependencies {
 	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+    //mappings fileTree(dir: "mappings", include: "**.jar")
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
@@ -26,7 +28,7 @@ dependencies {
 	// You may need to force-disable transitiveness on them.
 	
 	// https://mvnrepository.com/artifact/javax.annotation/jsr305
-	implementation group: 'javax.annotation', name: 'jsr305', version: '1.0'
+	implementation group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
 	modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
 }
 
