--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/use
-minecraft_version=1.17
-yarn_mappings=1.17+build.10
+minecraft_version=1.17.1-rc2
+yarn_mappings=1.17.1-rc2+build.1
 loader_version=0.11.6
 
 # Mod Properties
@@ -14,5 +14,5 @@ archives_base_name = better-nether
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.36.0+1.17
+fabric_version=0.36.1+1.17
 modmenu_version=2.0.2
