--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://fabricmc.net/use
-minecraft_version=1.17.1-rc2
-yarn_mappings=1.17.1-rc2+build.1
+# check these on https://fabricmc.net/versions.html
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.1
 loader_version=0.11.6
+
+#Fabric api
+fabric_version=0.36.1+1.17
 
 # Mod Properties
 mod_version = 5.1.2
@@ -13,6 +16,8 @@ maven_group = paulevs.betternether
 archives_base_name = better-nether
 
 # Dependencies
-# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-fabric_version=0.36.1+1.17
 modmenu_version=2.0.2
+
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.1
+loader_version=0.11.6
