--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,11 @@ repositories {
         url = 'https://jitpack.io'
     }
     maven { url "https://maven.shedaniel.me/" }
-	maven { url "https://maven.terraformersmc.com/releases/"}
+	//maven { url "https://maven.terraformersmc.com/releases/"}
+    
+    flatDir {
+        dirs '/Users/frank/Library/Application Support/minecraft/mods'
+    }
 }
 
 processResources {
