--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,7 @@ archives_base_name = better-nether
 
 # Dependencies
 modmenu_version=2.0.2
+bclib_version=0.2.0
 
 minecraft_version=1.17.1
 yarn_mappings=1.17.1+build.1
