--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
 minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.1
+yarn_mappings=1.17.1+build.14 # We use official Mojang mappings now
 loader_version=0.11.6
 
 #Fabric api
