Automatically find and load BCLib as local dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
+#Loom
+loom_version=0.8-SNAPSHOT
+
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
 minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.14 # We use official Mojang mappings now
 loader_version=0.11.6
-
-#Fabric api
 fabric_version=0.36.1+1.17
 
 # Mod Properties
@@ -17,8 +17,4 @@ archives_base_name = better-nether
 
 # Dependencies
 modmenu_version=2.0.2
-bclib_version=0.3.0-SNAPSHOT
-
-minecraft_version=1.17.1
-yarn_mappings=1.17.1+build.1
-loader_version=0.11.6
+bclib_version=0.3.0
