--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 
 #Loom
-loom_version=0.8-SNAPSHOT
+loom_version=0.10-SNAPSHOT
 
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
-minecraft_version=1.17.1
-loader_version=0.11.6
-fabric_version=0.39.1+1.17
+minecraft_version= 21w40a
+loader_version= 0.12.1
+fabric_version = 0.40.8+1.18
 
 # Mod Properties
 mod_version = 5.3.4
