--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -1,13 +1,13 @@
-name: Bug Report
+name: Report a Bug
 description: File a bug report
-title: "[Bug]: "
+title: "[Bug] "
 labels: ["bug"]
 body:
   - type: markdown
     attributes:
       value: |
         Thanks for taking the time to report a Bug in BetterNether!
- - type: textarea
+  - type: textarea
     id: what-happened
     attributes:
       label: What happened?
@@ -16,7 +16,7 @@ body:
       value: "A bug happened!"
     validations:
       required: true
-   - type: markdown
+  - type: markdown
     attributes:
       value: |
         ### Versions
