--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ loom_version=0.10-SNAPSHOT
 
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
-minecraft_version= 21w44a
-loader_version= 0.12.4
-fabric_version = 0.41.4+1.18
+minecraft_version= 1.18
+loader_version= 0.12.6
+fabric_version = 0.43.1+1.18
 
 # Mod Properties
 mod_version = 5.3.6
