--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ repositories {
     maven { url 'https://jitpack.io' }
     maven { url "https://maven.shedaniel.me/" }
 	//maven { url "https://maven.terraformersmc.com/releases/"}
+    maven { url 'https://maven.terraformersmc.com/releases' }
     flatDir {
         dirs 'libs'
     }
