Removed unneeded repos

--- a/build.gradle
+++ b/build.gradle
@@ -41,9 +41,9 @@ repositories {
     mavenCentral()
     //mavenLocal()
     maven { url 'https://jitpack.io' }
-    maven { url "https://maven.shedaniel.me/" }
+    //maven { url "https://maven.shedaniel.me/" }
 	//maven { url "https://maven.terraformersmc.com/releases/"}
-    maven { url 'https://maven.terraformersmc.com/releases' }
+    //maven { url 'https://maven.terraformersmc.com/releases' }
     flatDir {
         dirs 'libs'
     }
