--- a/gradle.properties
+++ b/gradle.properties
@@ -2,19 +2,19 @@
 org.gradle.jvmargs=-Xmx1G
 
 #Loom
-loom_version=0.10-SNAPSHOT
+loom_version=0.11-SNAPSHOT
 
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
-minecraft_version= 1.18.2
-loader_version= 0.13.3
-fabric_version = 0.48.0+1.18.2
+minecraft_version= 22w18a
+loader_version= 0.14.3
+fabric_version = 0.52.1+1.19
 
 # Mod Properties
-mod_version = 6.1.1
+mod_version = 7.0.0
 maven_group = paulevs.betternether
 archives_base_name = better-nether
 
 # Dependencies
-bclib_version=1.4.5
-wthit_version=4.7.3
+bclib_version=2.0.0
+wthit_version=5.0.0
