--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -56,8 +56,10 @@ body:
     id: mc_version
     attributes:
       label: Minecraft
-      description: What version BCLib is installed?
+      description: What version of Minecraft is installed?
       options:
+        - 1.19-Snapshot
+        - 1.18.2
         - 1.18.1
         - 1.18
         - 1.17.1
