--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@ fabric_version = 0.52.1+1.19
 
 # Mod Properties
 mod_version = 7.0.0
-maven_group = paulevs.betternether
+maven_group = org.betterx.betternether
 archives_base_name = better-nether
 
 # Dependencies
