Fixes for 1.19-pre1

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ loom_version=0.11-SNAPSHOT
 
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
-minecraft_version= 22w18a
-loader_version= 0.14.3
-fabric_version = 0.52.1+1.19
+minecraft_version= 1.19-pre1
+loader_version= 0.14.5
+fabric_version = 0.52.4+1.19
 
 # Mod Properties
 mod_version = 7.0.0
