Improved SurfaceRule Handling

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,16 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
 #Loom
 loom_version=0.11-SNAPSHOT
-
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
-minecraft_version= 1.19-pre1
-loader_version= 0.14.5
-fabric_version = 0.52.4+1.19
-
+minecraft_version=1.19-pre3
+loader_version=0.14.6
+fabric_version=0.53.4+1.19
 # Mod Properties
-mod_version = 7.0.0
-maven_group = org.betterx.betternether
-archives_base_name = better-nether
-
+mod_version=7.0.0
+maven_group=org.betterx.betternether
+archives_base_name=better-nether
 # Dependencies
 bclib_version=2.0.0
 wthit_version=5.0.0
