--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.jvmargs=-Xmx1G
 loom_version=0.12-SNAPSHOT
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
-minecraft_version=1.19-pre3
+minecraft_version=1.19-rc2
 loader_version=0.14.6
-fabric_version=0.53.4+1.19
+fabric_version=0.55.0+1.19
 # Mod Properties
 mod_version=7.0.0
 maven_group=org.betterx.betternether
