--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,1 +1,5 @@
-blank_issues_enabled: true
+blank_issues_enabled: false
+contact_links:
+  - name: New BetterNether Repository
+    url: https://github.com/quiqueck/BetterNether/issues
+    about: The Issue-Tracker (and main Repository) for BetterNether moved to a new Maintainer. Please post your Issues there.
