--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
-	id 'fabric-loom' version "${loom_version}"
-	id 'maven-publish'
+    id 'fabric-loom' version "${loom_version}"
+    id 'maven-publish'
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
@@ -16,29 +16,29 @@ loom {
 }
 
 dependencies {
-	//to change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings loom.officialMojangMappings()
+    //to change the versions see the gradle.properties file
+    minecraft "com.mojang:minecraft:${project.minecraft_version}"
+    mappings loom.officialMojangMappings()
 
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+    // Fabric API. This is technically optional, but you probably want it anyway.
+    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	// https://mvnrepository.com/artifact/javax.annotation/jsr305
-	compileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
+    // https://mvnrepository.com/artifact/javax.annotation/jsr305
+    compileOnly group: 'com.google.code.findbugs', name: 'jsr305', version: '3.0.2'
 
 
-	modCompileOnly "mcp.mobius.waila:wthit-api:fabric-${project.wthit_version}" // compile against the API
-	// modRuntime "mcp.mobius.waila:wthit:fabric-${project.wthit_version}" // run against the full jar
+    modCompileOnly "mcp.mobius.waila:wthit-api:fabric-${project.wthit_version}" // compile against the API
+    // modRuntime "mcp.mobius.waila:wthit:fabric-${project.wthit_version}" // run against the full jar
 
-	println "Using local BCLib: ${local_bclib}"
-    if (local_bclib){
-		implementation project(path:":BCLib", configuration:'dev')
+    println "Using local BCLib: ${local_bclib}"
+    if (local_bclib) {
+        implementation project(path: ":BCLib", configuration: 'dev')
     } else {
-        modImplementation "com.github.paulevsGitch:BCLib:${project.bclib_version}"
+        modImplementation "com.github.quiqueck:BCLib:${project.bclib_version}"
     }
-    
+
 }
 
 repositories {
@@ -46,9 +46,9 @@ repositories {
     //mavenLocal()
     maven { url 'https://jitpack.io' }
     //maven { url "https://maven.shedaniel.me/" }
-	//maven { url "https://maven.terraformersmc.com/releases/"}
+    //maven { url "https://maven.terraformersmc.com/releases/"}
     //maven { url 'https://maven.terraformersmc.com/releases' }
-	maven { url "https://maven.bai.lol" }
+    maven { url "https://maven.bai.lol" }
     flatDir {
         dirs 'libs'
     }
@@ -67,17 +67,17 @@ def useApi(String dep) {
 
 processResources {
     println "Version: ${project.version}"
-	inputs.property "version", project.version
+    inputs.property "version", project.version
     filesMatching("fabric.mod.json") {
-		expand "version": project.version
-	}
+        expand "version": project.version
+    }
 }
 
 // ensure that the encoding is set to UTF-8, no matter what the system default is
 // this fixes some edge cases with special characters not displaying correctly
 // see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
-	options.encoding = "UTF-8"
+    options.encoding = "UTF-8"
     it.options.release = 17
 }
 
@@ -85,38 +85,38 @@ tasks.withType(JavaCompile) {
 // if it is present.
 // If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = "sources"
-	from sourceSets.main.allSource
+    classifier = "sources"
+    from sourceSets.main.allSource
 }
 
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
-	// If you remove this line, sources will not be generated.
-	withSourcesJar()
+    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
+    // if it is present.
+    // If you remove this line, sources will not be generated.
+    withSourcesJar()
 }
 
 jar {
-	from "LICENSE"
+    from "LICENSE"
 }
 
 // configure the maven publication
 publishing {
-	publications {
-		mavenJava(MavenPublication) {
-			// add all the jars that should be included when publishing to maven
-			artifact(remapJar) {
-				builtBy remapJar
-			}
-			artifact(sourcesJar) {
-				builtBy remapSourcesJar
-			}
-		}
-	}
+    publications {
+        mavenJava(MavenPublication) {
+            // add all the jars that should be included when publishing to maven
+            artifact(remapJar) {
+                builtBy remapJar
+            }
+            artifact(sourcesJar) {
+                builtBy remapSourcesJar
+            }
+        }
+    }
 
-	// select the repositories you want to publish to
-	repositories {
-		// uncomment to publish to the local maven
-		// mavenLocal()
-	}
+    // select the repositories you want to publish to
+    repositories {
+        // uncomment to publish to the local maven
+        // mavenLocal()
+    }
 }
