--- a/gradle.properties
+++ b/gradle.properties
@@ -12,5 +12,5 @@ mod_version=7.0.0
 maven_group=org.betterx.betternether
 archives_base_name=better-nether
 # Dependencies
-bclib_version=2.0.0
+bclib_version=1.19-SNAPSHOT
 wthit_version=5.0.0
