--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ minecraft_version=1.19
 loader_version=0.14.6
 fabric_version=0.55.2+1.19
 # Mod Properties
-mod_version=7.0.0
+mod_version=7.0.1
 maven_group=org.betterx.betternether
 archives_base_name=better-nether
 # Dependencies
-bclib_version=1.19-SNAPSHOT
+bclib_version=2.0.1
 wthit_version=5.0.0
