--- a/build.gradle
+++ b/build.gradle
@@ -39,16 +39,15 @@ dependencies {
         modImplementation "com.github.quiqueck:BCLib:${project.bclib_version}"
     }
 
+    modCompileOnly "dev.emi:emi:${emi_version}"
 }
 
 repositories {
     mavenCentral()
     //mavenLocal()
     maven { url 'https://jitpack.io' }
-    //maven { url "https://maven.shedaniel.me/" }
-    //maven { url "https://maven.terraformersmc.com/releases/"}
-    //maven { url 'https://maven.terraformersmc.com/releases' }
     maven { url "https://maven.bai.lol" }
+    maven { url 'https://maven.terraformersmc.com' }
     flatDir {
         dirs 'libs'
     }
