--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,10 @@
 org.gradle.jvmargs=-Xmx1G
 #Loom
 loom_version=0.12-SNAPSHOT
+#Modrinth
+modrinth_versions=["1.19", "1.19.1", "1.19.2"]
+release_channel=release #`release`, `beta` or `alpha`
+modrinth_id=betternether
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
 minecraft_version=1.19.2
