--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,8 @@ org.gradle.jvmargs=-Xmx1G
 loom_version=0.12-SNAPSHOT
 #Modrinth
 modrinth_versions=["1.19", "1.19.1", "1.19.2"]
-release_channel=release #`release`, `beta` or `alpha`
+#`release`, `beta` or `alpha`
+release_channel=release
 modrinth_id=betternether
 # Fabric Properties
 # check these on https://fabricmc.net/versions.html
